force-app/main/default/objects/Grant_Contact__c/Grant_Contact__c.object-meta.xml
<CustomObject>
    <description>Junction object that connects Grant and Contact objects</description>
    <label>Grant Contact</label>
    <nameField>
        <displayFormat>GC-{00000000}</displayFormat>
        <label>Grant Contact  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grant Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>