force-app/main/default/objects/Grant_Contact__c/fields/BCPS__c.field-meta.xml
<CustomField>
    <fullName>BCPS__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Captures the allocation amount from BCPS</description>
    <label>BCPS</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>