force-app/main/default/objects/Grant_Contact__c/fields/CPS__c.field-meta.xml
<CustomField>
    <fullName>CPS__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Captures the allocation amount from CPS.</description>
    <label>CPS</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>