force-app/main/default/objects/Grant_Contact__c/fields/DCPS__c.field-meta.xml
<CustomField>
    <fullName>DCPS__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Captures the allocation amount from DCPS</description>
    <label>DCPS</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>