force-app/main/default/objects/Grant_Contact__c/fields/Deduction_Amount__c.field-meta.xml
<CustomField>
    <fullName>Deduction_Amount__c</fullName>
    <description>Captures the non-taxable amount for this stipend.</description>
    <label>Deduction Amount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>