force-app/main/default/objects/Grant_Contact__c/fields/Deduction_Code__c.field-meta.xml
<CustomField>
    <fullName>Deduction_Code__c</fullName>
    <description>Captures the Deduction Code used by ADP.</description>
    <inlineHelpText>If the related volunteer will be taking a deduction amount, select NS. Otherwise, leave blank.</inlineHelpText>
    <label>Deduction Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>