force-app/main/default/objects/Grant_Contact__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>End Date for the Grant Contact</description>
    <inlineHelpText>Enter the date on which the volunteer stops tracking volunteer hours towards this Grant (default date is the grant end date).</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>