force-app/main/default/objects/Grant_Contact__c/fields/FLBC__c.field-meta.xml
<CustomField>
    <fullName>FLBC__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Captures the allocation amount from FLBC</description>
    <label>FLBC</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>