force-app/main/default/objects/Grant_Contact__c/fields/General__c.field-meta.xml
<CustomField>
    <fullName>General__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Captures the allocation amount from General funds</description>
    <label>General</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>