force-app/main/default/objects/Grant_Contact__c/fields/Grant__c.field-meta.xml
<CustomField>
    <fullName>Grant__c</fullName>
    <description>Field that creates a MD relationship between Grant and Contact</description>
    <label>Grant</label>
    <referenceTo>Grant__c</referenceTo>
    <relationshipLabel>Grant Contacts</relationshipLabel>
    <relationshipName>Grant_Contacts</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>