force-app/main/default/objects/Grant_Contact__c/fields/Grant_Year__c.field-meta.xml
<CustomField>
    <fullName>Grant_Year__c</fullName>
    <label>Grant Year</label>
    <length>10</length>
    <type>Text</type>
</CustomField>