force-app/main/default/objects/Grant_Contact__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <description>Checkbox used to indicate the grant associated to this volunteer is active.</description>
    <formula>AND(  
 TODAY()&gt;= Start_Date__c, 
 TODAY()&lt;= End_Date__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checkbox used to indicate the grant associated to this volunteer is active.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>