force-app/main/default/objects/Grant_Contact__c/fields/PA_Charter_Schools__c.field-meta.xml
<CustomField>
    <fullName>PA_Charter_Schools__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Captures the allocation amount from PA Charter Schools</description>
    <label>PA Charter Schools</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>