force-app/main/default/objects/Grant_Contact__c/fields/Pay_Monthly_Stipend__c.field-meta.xml
<CustomField>
    <fullName>Pay_Monthly_Stipend__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Captures whether an EC assignment is eligible for a stipend payment for a given month.</description>
    <inlineHelpText>This field is checked if the volunteer meets all requirements to be paid a stipend this month.</inlineHelpText>
    <label>Pay Monthly Stipend</label>
    <type>Checkbox</type>
</CustomField>