force-app/main/default/objects/Grant_Contact__c/fields/Pew__c.field-meta.xml
<CustomField>
    <fullName>Pew__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Captures the allocation from Pew.</description>
    <label>Pew</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>