force-app/main/default/objects/Grant_Contact__c/fields/Previous_Pay_Monthly_Stipend__c.field-meta.xml
<CustomField>
    <fullName>Previous_Pay_Monthly_Stipend__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Captures previous pay monthly stipend value.</description>
    <label>Previous Pay Monthly Stipend</label>
    <type>Checkbox</type>
</CustomField>