force-app/main/default/objects/Grant_Contact__c/fields/Primary_Grant_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Primary_Grant_Allocation__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Captures the stipend allocation from the primary grant for a grant contact</description>
    <inlineHelpText>Enter the amount of the stipend that will be paid using the primary grant (DOJ, CNCS, RSVP, SERVE DC, or GOSV)</inlineHelpText>
    <label>Primary Grant Allocation</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>