force-app/main/default/objects/Grant_Contact__c/fields/PSD__c.field-meta.xml
<CustomField>
    <fullName>PSD__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Captures the allocation amount from PSD</description>
    <label>PSD</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>