force-app/main/default/objects/Grant_Contact__c/fields/Rate_1_Amount__c.field-meta.xml
<CustomField>
    <fullName>Rate_1_Amount__c</fullName>
    <description>Captures the taxable amount paid for this stipend.</description>
    <label>Rate 1 Amount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>