force-app/main/default/objects/Grant_Contact__c/fields/Source_Key__c.field-meta.xml
<CustomField>
    <fullName>Source_Key__c</fullName>
    <description>FIS Grant Contract Record Id</description>
    <externalId>true</externalId>
    <label>Source Key</label>
    <length>18</length>
    <type>Text</type>
</CustomField>