force-app/main/default/objects/Grant_Contact__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Start Date for the Grant Contact</description>
    <inlineHelpText>Enter the date on which the volunteer begins/began tracking volunteer hours towards this Grant (default date is the creation date).</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>