force-app/main/default/objects/Grant_Contact__c/fields/Stipend_Payment_Error__c.field-meta.xml
<CustomField>
    <fullName>Stipend_Payment_Error__c</fullName>
    <label>Stipend Payment Error</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>