force-app/main/default/objects/Grant_Contact__c/fields/Stipend_Payments_YTD__c.field-meta.xml
<CustomField>
    <fullName>Stipend_Payments_YTD__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Captures the number of stipend payments paid on a grant for a given school year.</description>
    <label>Stipend Payments YTD</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>