force-app/main/default/objects/Grant_Contact__c/fields/Total_Stipend_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Stipend_Amount__c</fullName>
    <description>Captures the total stipend amount. This is equal to Rate1 Amount t+ Deduction Amount</description>
    <formula>Rate_1_Amount__c - Deduction_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Stipend Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>