force-app/main/default/objects/Grant_Contact__c/fields/Weekly_Hour_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Hour_Commitment__c</fullName>
    <inlineHelpText>Number of volunteer hours recommended per week for this grant</inlineHelpText>
    <label>Recommended Weekly Hour Commitment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>