force-app/main/default/objects/Grant_Contact__c/validationRules/ADP_File_Number_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>ADP_File_Number_Required</fullName>
    <active>false</active>
    <description>If ADP file number is blank then Pay Monthly Stipend cannot be checked</description>
    <errorConditionFormula>AND
(ISBLANK(Contact__r.ADP_File_Number__c), 
(Pay_Monthly_Stipend__c = True))</errorConditionFormula>
    <errorDisplayField>Pay_Monthly_Stipend__c</errorDisplayField>
    <errorMessage>In order to pay a volunteer his/her stipend, the volunteer must have an ADP File Number on his/her contact record.</errorMessage>
</ValidationRule>