force-app/main/default/objects/Grant_Contact__c/validationRules/Prevent_Values_Entered_At_Same_Time.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Values_Entered_At_Same_Time</fullName>
    <active>false</active>
    <description>Rate 1 Amount and Deduction Amount fields cannot have values entered at the same time.</description>
    <errorConditionFormula>OR(NOT(ISBLANK(Deduction_Amount__c)), Deduction_Amount__c = 0)   
 &amp;&amp; 
OR (NOT (ISBLANK ( Rate_1_Amount__c )), Rate_1_Amount__c = 0)</errorConditionFormula>
    <errorDisplayField>Rate_1_Amount__c</errorDisplayField>
    <errorMessage>The Deduction Amount and Rate 1 Amount fields cannot have values filled in at the same time.</errorMessage>
</ValidationRule>